--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,8 @@
     <artifactId>PaymentSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!-- Dependencies -->
     <dependencies>
-        <!-- Lombok for auto-generating getters/setters -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -19,7 +18,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--- Apache Commons Lang/ Validate -->
+        <!-- Apache Commons Lang -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -41,7 +40,27 @@
             <version>2.2.224</version>
         </dependency>
 
+        <!-- JPA API -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+
+        <!-- Hibernate Core -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.7.Final</version>
+        </dependency>
     </dependencies>
+
 
     <!-- Compiler settings -->
     <properties>
