--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/api
 logging.level.org.springframework.security=DEBUG
 # H2 in-memory database
-spring.datasource.url=jdbc:h2:mem:paymentdb
+spring.datasource.url=jdbc:h2:file:~/paymentdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
